--- a/jemdoc.css
+++ b/jemdoc.css
@@ -365,3 +365,31 @@ table.imgtable, table.imgtable td {
     border: none;
     text-align: left;
 }
+#content {
+  position: relative;
+}
+
+.triangle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-top: 10px solid black;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid transparent;
+  cursor: pointer;
+}
+
+#content.open .triangle {
+  transform: rotate(180deg);
+}
+
+#content .content {
+  display: none;
+}
+
+#content.open .content {
+  display: block;
+}
